--- a/multicast/templates/youtuber.html
+++ b/multicast/templates/youtuber.html
@@ -4,8 +4,8 @@
 		<title>video streaming</title>
 	</head>
 	<body>
-		<video id="localVideo" autoplay="true" control></video>
-		<audio id="localAudio"></audio>
+		<video id="localVideo" autoplay=true></video>
+		<audio id="localAudio" autoplay=true></audio>
 		<script src="static/youtuber.js"></script>
 	</body>
 </html>
