--- a/webApp/src/css/bundle.css
+++ b/webApp/src/css/bundle.css
@@ -21,6 +21,8 @@ html {
 body {
   margin: 0;
 }
+
+
 article,
 aside,
 details,
@@ -42,6 +44,9 @@ progress,
 video {
   display: inline-block;
   vertical-align: baseline;
+  width:100%;
+  height:100%;
+  position:absolute;
 }
 audio:not([controls]) {
   display: none;
@@ -4997,6 +5002,12 @@ a.badge:focus {
 .jumbotron .container {
   max-width: 100%;
 }
+
+.jumbotron .container.btn{
+	width:auto;
+	margin:50px 20%;
+}
+
 @media screen and (min-width: 768px) {
   .jumbotron {
     padding-top: 48px;
